# neural-stereology

./: .gitignore  README.md  pyproject.toml
Lamella-2.2/: main.py  main_annealing.py
Lamella-2.2/annealing/: runner.py  sa.py
Lamella-2.2/core/: classes.py  const_ini.py  crystal.py  runner.py  sa.py  solver.py  tools.py
Lamella-2.2/cpp/: Feret_tiny  Feret_tiny.cpp
Lamella-2.2/model/: config.json
Lamella-2.2/result/: 2scale.tess  small.tess
Lamella-2.2/utils/: crystallography_functions.py  lhfun.py  mscmarc_functions.py  orilib.py  osamp.py  projlib.py  read_tessfile.py
scripts/: generate_mock_inputs.py  visualize_tess.py
src/lamella/: main.py
src/lamella/core/: classes.py  const.py  runner.py  sa.py  solver.py  tools.py
src/lamella/cpp/: Feret  Feret.cpp
src/lamella/model/: NiTiB19p.cif  NiTi_pm3m.cif  config.json
