[project]
name = "neural-stereology"
version = "0.1.0"
description = "Research codebase for stereology-related structure generation and future learning workflows."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "crystals>=1.7.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
]

[tool.uv]
package = false
